unpackaged/main/default/objects/FS_Order_Fulfillment__c/FS_Order_Fulfillment__c.object-meta.xml
<CustomObject>
    <description>Custom object to track order fulfillments for shippable items</description>
    <label>Order Fulfillment</label>
    <nameField>
        <displayFormat>OF {000000}</displayFormat>
        <label>OF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders Fulfillment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>