unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_ePayment__c.field-meta.xml
<CustomField>
    <fullName>FS_ePayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ePayment tied to the order fulfillment</inlineHelpText>
    <label>ePayment</label>
    <referenceTo>OrderApi__EPayment__c</referenceTo>
    <relationshipLabel>Orders Fulfillment</relationshipLabel>
    <relationshipName>Orders_Fulfillment</relationshipName>
    <type>Lookup</type>
</CustomField>