unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_EPayment_State__c.field-meta.xml
<CustomField>
    <fullName>FS_EPayment_State__c</fullName>
    <description>The state of the parent epayment. It should be success, if not then there is a potential error.</description>
    <formula>FS_ePayment__r.OrderApi__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The state of the parent epayment. It should be success, if not then there is a potential error.</inlineHelpText>
    <label>EPayment State</label>
    <type>Text</type>
</CustomField>