unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FS_Error_Message__c</fullName>
    <inlineHelpText>Error message if any issue occurs during the payment processing</inlineHelpText>
    <label>Error Message</label>
    <length>150</length>
    <type>Text</type>
</CustomField>