unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Number_of_Boxes_Shipped__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Boxes_Shipped__c</fullName>
    <inlineHelpText>Quantity of boxes shipped by NeoPost. populated via integration</inlineHelpText>
    <label>Number of Boxes Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>