unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Offline_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>FS_Offline_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked, if payment is not pre-authorized via Credit Card.</description>
    <inlineHelpText>Is checked, if payment is not pre-authorized via Credit Card.</inlineHelpText>
    <label>Offline Payment Received</label>
    <type>Checkbox</type>
</CustomField>