unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Orders Fulfillment</relationshipLabel>
    <relationshipName>Orders_Fulfillment</relationshipName>
    <type>Lookup</type>
</CustomField>