unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Order_Tracking__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Tracking__c</fullName>
    <inlineHelpText>Order Tracking record tied to the fulfillment record</inlineHelpText>
    <label>Order Tracking</label>
    <referenceTo>FS_Order_Tracking__c</referenceTo>
    <relationshipLabel>Orders Fulfillment</relationshipLabel>
    <relationshipName>Orders_Fulfillment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>