unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>FS_Quantity_Shipped__c</fullName>
    <inlineHelpText>Quantity of items shipped</inlineHelpText>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>