unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Status__c</fullName>
    <inlineHelpText>Status of ePayment</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>ePayment Submitted</fullName>
            </value>
            <value>
                <fullName>No ePayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>