unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Tracking_Number__c</fullName>
    <inlineHelpText>Tracking number for the shipment</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>