unpackaged/main/default/objects/FS_Order_Fulfillment__c/fields/FS_UPS_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_UPS_Tracking_Number__c</fullName>
    <formula>IF(NOT(ISBLANK( FS_Tracking_Number__c )),  HYPERLINK("https://www.ups.com/track?loc=en_US&amp;tracknum=" + FS_Tracking_Number__c , "Track Package" , "_blank"), "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the UPS site with the Tracking number</inlineHelpText>
    <label>UPS Tracking Number</label>
    <type>Text</type>
</CustomField>