unpackaged/main/default/objects/FS_Order_Fulfillment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FS_ePayment__c</columns>
    <columns>FS_Quantity_Shipped__c</columns>
    <columns>FS_Order__c</columns>
    <columns>FS_Status__c</columns>
    <columns>FS_Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>