unpackaged/main/default/objects/FS_Order_Fulfillment__c/listViews/FS_Unsettled_Payments.listView-meta.xml
<ListView>
    <fullName>FS_Unsettled_Payments</fullName>
    <columns>NAME</columns>
    <columns>FS_ePayment__c</columns>
    <columns>FS_Error_Message__c</columns>
    <columns>FS_Number_of_Boxes_Shipped__c</columns>
    <columns>FS_Order_Tracking__c</columns>
    <columns>FS_Quantity_Shipped__c</columns>
    <columns>FS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FS_Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Tracking_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FS_ePayment__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unsettled Payments</label>
</ListView>